--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,13 +105,12 @@ td a:hover {
 
 
 .board  {
-	/* background-image:url("images/greenBackground.jpg"); */
 	padding:1%;
 }
 table {
-	background:green;
-	/*
-	box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
-	background-image:url("images/greenBackground.jpg");
-	*/
+	background:#767575;
+	
+}
+table tr th {
+	background-color:#545454 !important;
 }
