--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Marck+Script&display=swap');
+
 tr, td {
 	border:2px solid white;
 	color:white;
-	font-size: 24px;
+	font-size: 18px;
 }
 td a {
 	color:white;
@@ -86,7 +88,7 @@ td a:hover {
 
 .tip .tiptext {
   visibility: hidden;
-  width: 15%;
+  width: 10%;
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;	  
   border-radius: 6px; 
@@ -105,7 +107,7 @@ td a:hover {
 
 
 .board  {
-	padding:1%;
+	padding:2%;
 }
 table {
 	background:#767575;
@@ -114,3 +116,39 @@ table {
 table tr th {
 	background-color:#545454 !important;
 }
+
+.gradeBox {
+	width:50px;
+	height:50px;
+	margin-right:10px;
+}
+
+.greenieHeader {
+	color:white;
+	font-size: 4.5rem;
+	position: relative;
+	top:50px;
+	font-family: 'Allerta Stencil', sans-serif;
+}
+.motto {
+	color:white;
+	font-family: 'Marck Script', cursive;
+	font-size: 2rem
+}
+.logo {
+	width:60%;
+	text-align: center;
+	margin:0 auto;
+}
+.table>:not(caption)>*>* {
+	background-color:grey;
+}
+
+.key {
+	width:350px;
+	float: right;
+}
+.key img {
+	width: 100%;
+}
+
